tests/negative/gold/type5_test.gold
tests/negative/type5_test.toit:4:9: error: Unresolved type: 'NonExisting'
  foo x/NonExisting:
        ^~~~~~~~~~~
Compilation failed.
